--- a/.github/workflows/sanity-template.yml
+++ b/.github/workflows/sanity-template.yml
@@ -8,8 +8,8 @@
 #todo: 6 -> Recuerda modificar el projectKey correspondiente, si estás en L3, debe ser GX3 y así...
 #todo: 7 -> Listo! Guarda los cambios (git add + git commit) y pushea (git push) para ejectutar este Pipeline!
 #*Resultado: Debería ejecutarse este Pipeline de GitHub Actions y correr cada uno de los Jobs declarados aquí.
-name: 🧪Playwright Sanity Testing
-run-name: ${{github.actor}}👨🏻‍🔬 ran TestSuite in ${{github.ref_name}}
+name: 🧪Pipeline SanityTest Execution
+run-name: ${{github.actor}}👨🏻‍🔬 triggered SanityTest in ${{github.ref_name}}
 on:
   push:
     branches: ['TuBranchAqui'] #! Cambia "TuBranchAqui" por el nombre de tu rama de tarea.
@@ -20,45 +20,45 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: 📘 Checkout Repo
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: 💿 Installing Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
-        node-version: 18
+        node-version: 20
 
-    - name: 💿Yarn Setup
-      uses: DerYeger/yarn-setup-action@master
-      with:
-        node-version: 18
+    - name: 🍙 Bun Setup
+      uses: oven-sh/setup-bun@v1
 
     - name: 🧬 Install Project Dependencies
       run: |
-        yarn
+        bun install
 
     - name: 🎭️ Installing Playwright And Browsers
       run: |
-        yarn pw:install
+        bun run pw:install
 
     - name: ✅ 🧪Test Suite Execution
       run: | #todo: EDITAR AQUÍ EL ARCHIVO SUITE A EJECUTAR:
-        yarn test:ci tests/elements/uploadDownload_example.test.ts
+        bun run test:ci tests/elements/uploadDownload_example.test.ts
 
     - name: 📊Generate Allure Report
       run: |
-        yarn allure:open
+        bun run allure:open
 
-    - name: 📡Upload Artifact - Allure Report
-      uses: actions/upload-artifact@v3
+    - name: ✅Check if XRAY_CLIENT is Defined
       if: always()
-      with:
-        name: test-report
-        path: allure-report
-        retention-days: 15
+      run: |
+        if [[ -z "${{ secrets.XRAY_CLIENT_ID }}" ]]; then
+          echo "XRAY_CLIENT_ID is not set. Please set it in the repository secrets to enable Slack notifications."
+        fi
+        if [[ -z "${{ secrets.XRAY_CLIENT_SECRET }}" ]]; then
+          echo "XRAY_CLIENT_SECRET is not set. Please set it in the repository secrets to enable Slack notifications."
+        fi
 
     - name: ✅Import Test Results to Xray
-      if: always()
-      uses: mikepenz/xray-action@v2
+      if: env.XRAY_CLIENT != '' && env.XRAY_SECRET != ''
+      uses: mikepenz/xray-action@v3
       with:
         username: ${{secrets.XRAY_CLIENT_ID}}
         password: ${{secrets.XRAY_CLIENT_SECRET}}
@@ -66,10 +66,28 @@ jobs:
         testPaths: 'test-junit-report/main-importer-report.xml'
         testExecKey: 'GX3-1533' #!Cambiar a tu TX correspondiente.
         projectKey: 'GX3' #!Cambiar a tu Proyecto Level correspondiente.
+      env:
+        XRAY_CLIENT: ${{ secrets.XRAY_CLIENT_SECRET }}
+        XRAY_SECRET: ${{ secrets.XRAY_CLIENT_SECRET }}
+
+    - name: 📡Upload Artifact - Allure Report
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: test-report
+        path: allure-report
+        retention-days: 15
+
+    - name: 🔔Check if SLACK_WEBHOOK is Defined
+      if: always()
+      run: |
+        if [[ -z "${{ secrets.SLACK_WEBHOOK }}" ]]; then
+          echo "SLACK_WEBHOOK is not set. Please set it in the repository secrets to enable Slack notifications."
+        fi
 
     - name: 🔔Slack Notification of Done
-      if: always()
-      uses: rtCamp/action-slack-notify@v2.2.0
+      if: env.SLACK_WEBHOOK != ''
+      uses: rtCamp/action-slack-notify@v2
       env:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
         SLACK_USERNAME: Ari✨
