--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,8 @@
 		"indent": ["warn", "tab", { "SwitchCase": 1 }],
 		"linebreak-style": ["off"],
 		"space-before-blocks": ["warn"],
-		"arrow-spacing": "warn",
+		"space-before-function-paren": ["error", { "anonymous": "never", "named": "never", "asyncArrow": "always" }],
+		"arrow-spacing": ["warn", { "before": true, "after": true }],
 		"quotes": ["warn", "single"],
 		"semi": ["warn", "always"],
 		"no-multi-spaces": ["warn"],
