--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
     "test:firefox": "npx playwright test --project=firefox",
     "test:edge": "npx playwright test --project=edge",
     "test:iphone": "npx playwright test --project=iphone",
-    "test:ci": "npx playwright test",
-    "test:azure": "npx playwright test -c playwright.azure.config.ts",
+    "test:ci": "npx playwright test --workers=4",
     "regression:chrome": "npx playwright test -c playwright.chrome.config.ts --project=chromium",
     "regression:firefox": "npx playwright test -c playwright.firefox.config.ts --project=firefox",
     "regression:edge": "npx playwright test -c playwright.edge.config.ts --project=edge",
     "regression:iphone": "npx playwright test -c playwright.iphone.config.ts --project=iphone",
     "regression:ci": "npx playwright test --workers=4",
-    "regression:super:setup": "npx playwright test --project=super-precondition-example --workers=1",
     "show:report:chrome": "npx playwright show-report test-html-report/chrome",
     "show:report:firefox": "npx playwright show-report test-html-report/firefox",
     "show:report:edge": "npx playwright show-report test-html-report/edge",
